K3d/tqTstTraefik/hostname0/hostname0-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hostname0-service
  labels:
    run: hostname0
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: hostname0
