K3d/tqTstTraefik/hostname0/hostname0-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hostname0-ingress
  labels:
    name: hostname0-myingress
  annotations:
    ingress.kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hostname0-service
            port: 
              number: 80
